--- a/github-bot-api/package.yml
+++ b/github-bot-api/package.yml
@@ -2,7 +2,9 @@ name: github-bot-api
 version: 0.0.0
 author: Niklas Rosenstein <nrosenstein@palantir.com>
 description: Package description here.
+readme: ../README.md
 requirements:
 - python ^3.5
 - PyJWT ^1.7.1
 - cryptography ^3.1.1
+- requests ^2.25.0
