--- a/github-bot-api/package.yml
+++ b/github-bot-api/package.yml
@@ -3,6 +3,7 @@ version: 0.3.1
 author: Niklas Rosenstein <nrosenstein@palantir.com>
 description: Package description here.
 readme: ../README.md
+license: MIT
 requirements:
 - python ^3.8
 - PyJWT ^1.7.1
