--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,6 +17,6 @@ jobs:
       run: |
         python -m pip install shut==0.17.2 -q
     - name: Test
-      run: shut -C github-bot-api pkg test --isolate
+      run: shut pkg test --isolate
     - name: Verify package metadata
-      run: shut -C github-bot-api  update --verify
+      run: shut update --verify
