--- a/package.yml
+++ b/package.yml
@@ -10,6 +10,11 @@ requirements:
 - cryptography ^3.1.1
 - requests ^2.25.0
 typed: true
+test-requirements:
+- PyGithub
+- types-flask
+- types-jwt
+- types-requests
 test-drivers:
 - type: pytest
 - type: mypy
