--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,7 +3,7 @@ name: Pylint
 on: [push]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -22,3 +22,25 @@ jobs:
       run: shut pkg test --isolate
     - name: Verify package metadata
       run: shut pkg update --verify
+
+  documentation:
+
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - name: Install dependencies
+      run: python -m pip install pydoc-markdown==4.2.0 mkdocs -q
+    - name: Generate docs
+      run: pydoc-markdown --build --site-dir "$PWD/_html"
+    - name: Publish docs
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      with:
+        branch: gh-pages
+        folder: _html
+        ssh-key: ${{ secrets.DEPLOY_KEY }}
