--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,6 +31,7 @@ jobs:
 
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/develop'
 
     steps:
     - uses: actions/checkout@v2
