--- a/package.yml
+++ b/package.yml
@@ -11,6 +11,7 @@ requirements:
 - cryptography ^3.1.1
 - requests ^2.25.0
 - Deprecated ^1.2.12
+- urllib3 ^1.26.6
 test-requirements:
 - PyGithub
 - types-flask
