--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,9 +14,9 @@ jobs:
       matrix:
         python-version: [ "3.8", "3.9", "3.10", "3.x" ]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: python-slap/slap.cli@gha/install/v1
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
       with: { python-version: "${{ matrix.python-version }}" }
     - run: slap install -vv --no-venv-check
     - run: slap test
@@ -28,9 +28,9 @@ jobs:
     if: github.ref == 'refs/heads/develop'
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     - name: Install dependencies
